--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: athul/waka-readme@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          WAKATIME_API_KEY: 1799d335-cac5-4243-a312-88cff6a3745a
